# libtag

./: Cargo.toml  diesel.toml
.github/workflows/: ci.yml
migrations/2024-09-30-100923_initial_migration/: down.sql  up.sql
src/: db.rs  exif.rs  lib.rs  main.rs  schema.rs
src/models/: mod.rs
src/models/files/: generated.rs
src/models/tag_file/: generated.rs
src/models/tags/: generated.rs
