[package]
name = "libtag"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"], default-features = false }
dotenvy = "0.15.7"
eyre = "0.6.12"
rayon = "1.10.0"
rexif = "0.7.4"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
